<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="83dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="70dp"
        android:text="@string/title"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginLeft="120dp"
        android:text="@string/amount_label" />

    <EditText
        android:id="@+id/input_amount"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:ems="10"
        android:hint="$"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="164dp"
        android:layout_height="31dp"
        android:layout_marginLeft="120dp"
        android:text="@string/percent_label" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp">

        <RadioButton
            android:id="@+id/percent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent1" />

        <RadioButton
            android:id="@+id/percent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent2" />

        <RadioButton
            android:id="@+id/percent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent3" />

    </RadioGroup>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:text="@string/cal" />

    <TextView
        android:id="@+id/output_tip"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:text="@string/output_tip"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:hint="__________"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/output_total"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:text="@string/output_total"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/result_tv2"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:hint="__________"
        android:textSize="18dp" />

</LinearLayout>